--- a/layouts/partials/menu.html
+++ b/layouts/partials/menu.html
@@ -4,6 +4,7 @@
       {{ $currentPage := . }}
       {{ range .Site.Menus.main }}
         {{ $active := or ($currentPage.IsMenuCurrent "main" .) ($currentPage.HasMenuCurrent "main" .) }}
+        {{ partials "analytics" . }}
         <li class="{{if $active}} active{{end}}">
           <a href="{{ .URL }}">{{ .Name }}</a>
         </li>
