--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,6 +4,15 @@
   <meta charset="utf-8">
   <title>{{ .Site.Title }}</title>
   <link rel="stylesheet" href="{{ "/css/style.css" | relURL }}">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-139334873-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-139334873-1');
+</script>
+
 </head>
 <body>
   <div class="wrapper">
