--- a/layouts/partials/menu.html
+++ b/layouts/partials/menu.html
@@ -10,5 +10,6 @@
       {{end}}
       <li>&hearts; {{ now.Year }} {{ .Site.Params.authors }}</li>
     </ul>
+    <a href="http://pocitadlo.abz.cz/" title="počítadlo přístupů: pocitadlo.abz.cz"><img src="http://pocitadlo.abz.cz/aip.php?tp=bb" alt="počítadlo.abz.cz" border="0" /></a>
   </nav>
 </aside>
